- Mejorado el footer. Ahora se rellena el contenido principal todo el alto de la página para que no se muestre el footer en la mitad. - Corregido el color del índice del drawer, mejorando la visibilidad en modo oscuro/claro. - Mejorado los href de los enlaces del drawer con el TOC (ahora muestra la ruta completa). - Cambiado el speeddial por un botón normal flotante para abrir el drawer con el TOC (en un futuro si se amplian más botones se puede usar el speeddial, pero con un único botón es tontería. - Eliminado los margin-bottom de 10rem que había en algunos elementos para solventar el problema del footer.

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,1 +1,17 @@
+/* En app.component.css */
 
+
+
+/* 1. El contenedor principal se convierte en un layout Flex vertical
+      y le decimos que ocupe al menos el 100% de la altura de la pantalla. */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
+
+/* 2. Esta es la línea clave. Le decimos al contenido principal
+      que "crezca" para ocupar todo el espacio sobrante. */
+.main-content {
+  flex: 1;
+}
