--- a/src/app/components/indice/indice.css
+++ b/src/app/components/indice/indice.css
@@ -1,6 +1,5 @@
 .indice {
     margin-top: 8rem;
-    margin-bottom: 10rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     /* Borde simple y redondeado usando el color primario de PrimeNG */
